Closed
Bug 663573
Opened 15 years ago
Closed 15 years ago
IonMonkey: Assertion failure: numSuccessorsWithPhis == 1, at IonAnalysis.cpp:494
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: adrake, Assigned: adrake)
Details
Attachments
(1 file)
|
541 bytes,
patch
|
dvander
:
review+
|
Details | Diff | Splinter Review |
Test case:
function loop() {
do { } while (0);
}
loop();
Yields assert in summary. The patch changes the assert to be <= 1, as some blocks may not have any phis.
| Assignee | ||
Updated•15 years ago
|
Attachment #538650 -
Flags: review?(dvander)
| Assignee | ||
Updated•15 years ago
|
Assignee: general → adrake
Comment on attachment 538650 [details] [diff] [review]
Patch v0
Phew, I thought our invariant was broken!
Attachment #538650 -
Flags: review?(dvander) → review+
| Assignee | ||
Comment 2•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•