Bug 663573: Fix numSuccessorsWithPhis assertion when no phis are present. r=dvander